# jiwu-mall-chat-tauri

./: .env.development  .env.production  .env.production.spa  .env.test  .eslintignore  .eslintrc  .gitignore  .npmrc  .prettierrc.js  .stylelintrc.js  README.en.md  README.md  app.config.ts  app.vue  build.js  declarations.d.ts  error.vue  eslint.config.mjs  extensions.json  nginx.conf  nuxt-env.d.ts  nuxt.config.ts  package.json  pnpm-lock.yaml  settings.json  shims.d.ts  tsconfig.json  uno.config.ts
.github/releasemd/: v1.0.10.md  v1.0.11.md  v1.0.12.md  v1.0.13.md  v1.0.14.md  v1.0.15.md  v1.0.16.md  v1.0.17.md  v1.0.18.md  v1.0.19.md  (+57 more)
app/: index.ts  init.ts  spa-loading-template.html
composables/: useElectron.ts
config/: pwa.ts
constants/: index.ts
init/: iframe.ts  index.ts  init.ts  setting.ts  system.ts  ws.ts
layouts/: chat.vue  default.vue  error.vue
middleware/: router.global.ts
pages/: [...all].vue  extend.vue  index.vue  login.vue
plugins/: directive.ts  error-handler.ts  global.ts  right-menu.ts  v-md-editor.ts
public/: useWsWoker.js  useWsWorker.js
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/LICENSE/: LICENSE.txt
src-tauri/capabilities/: default.json  desktop.json  mobile.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs  mobile.rs  tray.rs  tray_bar.rs  window.rs
src-tauri/src/desktops/: commands.rs  mod.rs  setup.rs  tray.rs  window.rs
src-tauri/src/mobiles/: commands.rs  mod.rs  setup.rs  window.rs
types/: index.ts  result.ts  tauri.ts
windows/: actions.ts  index.ts
(+238 files in other folders)
